--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "backend",
+  "name": "99burger-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,7 +19,5 @@
     "mysql2": "^3.14.3",
     "node-fetch": "^3.3.2",
     "node-thermal-printer": "^4.5.0"
-  },
-  "keywords": [],
-  "description": ""
+  }
 }
